Changes in Mixed Approach

--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
     "data.head(3)\n",
     "\n",
     "# Features and target\n",
-    "X = data.drop(columns=['isFraud'])\n",
+    "X = data.drop(columns=['isFraud', 'nameDest', 'nameOrig'])\n",
     "y = data['isFraud']"
    ]
   },
@@ -185,6 +185,26 @@
     "print(\"-\"*100)\n",
     "\n",
     "print(f\"Non-fraudulent transactions: {non_fraudulent_perc}\\nFraudulent transactions: {fraudulent_perc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.duplicated().sum()"
    ]
   },
   {
@@ -498,29 +518,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy : 0.9939117199391172\n",
-      "Recall : 0.9967952905829126\n",
-      "Precision : 0.9910562172656402\n",
-      "AVG_Precision : 0.9994006161393795\n"
+      "Accuracy : 0.9920091324200915\n",
+      "Recall : 0.9963584634977755\n",
+      "Precision : 0.9878271778548307\n",
+      "F1 : 0.9920705114011161\n",
+      "AVG_Precision : 0.9991119165922419\n"
      ]
     }
    ],
    "source": [
     "cv = StratifiedKFold(n_splits=5)\n",
     "\n",
-    "cross_val = cross_validate(full_pipe, X_train, y_train, scoring = ['accuracy', 'recall', 'precision', 'average_precision'], cv=cv)\n",
+    "cross_val = cross_validate(full_pipe, X_train, y_train, scoring = ['accuracy', 'recall', 'precision', 'average_precision', 'f1'], cv=cv)\n",
     "cross_val\n",
     "\n",
     "print(f\"Accuracy : {cross_val['test_accuracy'].mean()}\")\n",
     "print(f\"Recall : {cross_val['test_recall'].mean()}\")\n",
     "print(f\"Precision : {cross_val['test_precision'].mean()}\")\n",
+    "print(f\"F1 : {cross_val['test_f1'].mean()}\")\n",
     "print(f\"AVG_Precision : {cross_val['test_average_precision'].mean()}\")"
    ]
   },
@@ -1056,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1102,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1125,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,9 +1158,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "      Accuracy: 1.0\n",
+      "      Recall: 0.99\n",
+      "      Precision: 0.47\n",
+      "      F1 Score: 0.64\n",
+      "      ROC AUC: 0.99\n",
+      "      \n"
+     ]
+    }
+   ],
    "source": [
     "# Metrics in the test dataset\n",
     "accuracy_5 = accuracy_score(y_test, y_pred)\n",
@@ -1158,19 +1194,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy : 0.9985408077397446\n",
+      "Recall : 0.989041964657358\n",
+      "Precision : 0.4693499231679585\n",
+      "AVG_Precision : 0.9694806788108412\n",
+      "F1 : 0.6365111873827679\n"
+     ]
+    }
+   ],
    "source": [
     "# Stratified cross validation\n",
     "cv = StratifiedKFold(n_splits=5)\n",
     "\n",
-    "cross_val = cross_validate(full_pipe, X_train, y_train, scoring = ['accuracy', 'recall', 'precision', 'average_precision'], cv=cv)\n",
+    "cross_val = cross_validate(full_pipe, X_train, y_train, scoring = ['accuracy', 'recall', 'precision', 'average_precision', 'f1'], cv=cv)\n",
     "\n",
     "print(f\"Accuracy : {cross_val['test_accuracy'].mean()}\")\n",
     "print(f\"Recall : {cross_val['test_recall'].mean()}\")\n",
     "print(f\"Precision : {cross_val['test_precision'].mean()}\")\n",
-    "print(f\"AVG_Precision : {cross_val['test_average_precision'].mean()}\")"
+    "print(f\"AVG_Precision : {cross_val['test_average_precision'].mean()}\")\n",
+    "print(f\"F1 : {cross_val['test_f1'].mean()}\")"
    ]
   },
   {
@@ -1247,13 +1296,6 @@
    "outputs": [],
    "source": [
     "round(precision_9, 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Fine Tuning"
    ]
   },
   {
